--- a/style.css
+++ b/style.css
@@ -353,3 +353,27 @@ footer p{
     list-style-type: none; 
     padding: 0; 
 }
+.galeria {
+    display: flex;
+    justify-content: space-around;
+    background-color: #07062c;
+    padding: 10px;
+  }
+  .coluna {
+    margin: 5px;
+  }
+  .conteudo {
+    border: 2px solid #0a0849; /* Um azul mais claro que #07062c */
+    border-radius: 15px; /* Bordas arredondadas */
+    margin-bottom: 10px;
+    overflow: hidden; /* Garante que nada ultrapasse a borda arredondada */
+  }
+  .coluna.imagens, .coluna.videos {
+    display: flex;
+    flex-direction: column;
+  }
+  .coluna img, .coluna video {
+    width: 100%;
+    display: block;
+  }
+  
