--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 
 .background{
-    background-image: url(backp.png);
+    background-image: url(background.png);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -332,4 +332,64 @@ footer p{
     width: 1000px;
     margin: 30px auto;
     text-align: center;
+}
+#Sobre-Mim {
+    color: #191919;
+}
+
+.background-color-Contato {
+    background-color: #191919; 
+    padding: 50px 0;
+    color: #fff; 
+}
+.Text-contato {
+    text-align: center; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+}
+.lista-contato {
+    list-style-type: none; 
+    padding: 0; 
+}
+.galeria {
+    display: flex;
+    justify-content: space-around;
+    background-color: #07062c;
+    padding: 10px;
+  }
+  .coluna {
+    margin: 5px;
+  }
+  .conteudo {
+    border: 2px solid #0a0849; 
+    border-radius: 15px; 
+    margin-bottom: 10px;
+    overflow: hidden; 
+  }
+  .coluna.imagens, .coluna.videos {
+    display: flex;
+    flex-direction: column;
+  }
+  .coluna img, .coluna video {
+    width: 100%;
+    display: block;
+  }
+.inicio{
+    align-items: start;
+    padding:100px;
+    
+  }
+.direita {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -41%;
+}
+.direita {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 0;
+    top: 10; 
 }
