--- a/style.css
+++ b/style.css
@@ -333,3 +333,57 @@ footer p{
     margin: 30px auto;
     text-align: center;
 }
+#Sobre-Mim {
+    color: #191919;
+}
+
+.background-color-Contato {
+    background-color: #191919; 
+    padding: 50px 0;
+    color: #fff; 
+}
+.Text-contato {
+    text-align: center; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+}
+.lista-contato {
+    list-style-type: none; 
+    padding: 0; 
+}
+.galeria {
+    display: flex;
+    justify-content: space-around;
+    background-color: #07062c;
+    padding: 10px;
+  }
+  .coluna {
+    margin: 5px;
+  }
+  .conteudo {
+    border: 2px solid #0a0849; /* Um azul mais claro que #07062c */
+    border-radius: 15px; /* Bordas arredondadas */
+    margin-bottom: 10px;
+    overflow: hidden; /* Garante que nada ultrapasse a borda arredondada */
+  }
+  .coluna.imagens, .coluna.videos {
+    display: flex;
+    flex-direction: column;
+  }
+  .coluna img, .coluna video {
+    width: 100%;
+    display: block;
+  }
+  .direita {
+    display: flex;
+    justify-content: flex-end;
+    margin: 41%;
+}
+.direita {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 0;
+}
