--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+@media screen and (max-width: 768px) {
+
+    .main-sobre, .Caixa {
+        flex-direction: column;
+    }
+
+    .background-color-Sobre img, .Text-sobre {
+        width: 100%;
+    }
+
+    .Card {
+        width: 100%;
+        margin: 15px 0;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    nav ul.cabeçalho-link {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul.cabeçalho-link li {
+        padding: 10px 0;
+    }
+}
+
 *{
     padding: 0;
     margin: 0;
