--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ h3{
 }
 
 .Text-sobre p{
-    color: #3e4565;
+    color: #858eb9;
     letter-spacing: 1px;
     line-height: 28px;
     font-size: 18px;
