--- a/istilo.css
+++ b/istilo.css
@@ -1,59 +1,59 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Open Sans";
 }
 
-.wg1{
+.wg1 {
     grid-column: span 1;
 }
-.wg2{
+
+.wg2 {
     grid-column: span 2;
 }
-.hg1{
+
+.hg1 {
     grid-row: span 1;
 }
-.hg2{
+
+.hg2 {
     grid-row: span 2;
 }
 
-div.galeria{
+div.galeria {
     width: 90%;
     height: 90vh;
-
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 45vh;
-
 }
 
-div.single-galeria{
+div.single-galeria {
     margin: 3px;
     position: relative;
     cursor: pointer;
 }
 
-div.img{
+div.img {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    position: absolute;
+    position: relative; /* Alterado de absolute para relative */
 }
 
-div.img img{
+div.img img {
     position: relative;
     object-fit: cover;
     width: 100%;
     height: 100%;
 }
 
-div.overflow{
+div.overflow {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -62,7 +62,7 @@ div.overflow{
     transition: all 0.5s ease-in-out;
 }
 
-div.conteudo{
+div.conteudo {
     position: absolute;
     color: white;
     border-left: 3px solid white;
@@ -72,40 +72,41 @@ div.conteudo{
     transition: all 0.5s ease-in-out;
 }
 
-div.conteudo h1{
+div.conteudo h1 {
     font-size: 18px;
 }
 
-div.conteudo p{
+div.conteudo p {
     font-size: 10px;
     text-transform: uppercase;
 }
 
-
-div.single-galeria:hover div.overflow{
+div.single-galeria:hover div.overflow {
     opacity: 1;
 }
-div.single-galeria:hover div.conteudo{
+
+div.single-galeria:hover div.conteudo {
     bottom: 20px;
 }
 
-
-@media screen and (max-width: 764px){
-
-    .wg1{
+@media screen and (max-width: 764px) {
+    .wg1 {
         grid-column: span 2;
     }
-    .hg1{
+    .hg1 {
         grid-row: span 2;
     }
     
-    div.galeria{
+    div.galeria {
         grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: calc(45vh / 2);  
+        grid-auto-rows: calc(45vh / 2);
     }
 
-    div.conteudo h1{
+    div.conteudo h1 {
         font-size: 14px;
     }
 }
 
+body {
+    background-color: black;
+}
