--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
     letter-spacing: 1px;
 }
 span{
-    color: #858eb9;
+    color: #40615a;
 }
 
 nav ul li{
@@ -48,12 +48,12 @@ nav ul li a{
 }
 
 nav ul li a:hover{
-    color: #858eb9;
+    color: #40615a;
     transform: .4s;
 }
 
 .btn{
-    background-color: #858eb9;
+    background-color: #40615a;
     color: #fff;
     text-decoration: none;
     border: 2px solid transparent;
@@ -75,7 +75,7 @@ nav ul li a:hover{
 }
 
 .Main span{
-    color: #858eb9;
+    color: #2c4541;
 }
 
 h1{
@@ -85,7 +85,7 @@ h1{
 }
 
 h4{
-    color: #3e4565;
+    color: #2c4541;
     letter-spacing: 2px;
     font-size: 20px;
 }
@@ -106,7 +106,7 @@ h3{
     display: inline-block;
     width: 100%;
     padding: 14px 130px 14px 15px;
-    border: 2px solid #858eb9;
+    border: 2px solid #40615a;
     border-radius: 30px;
     outline: none;
 }
@@ -118,7 +118,7 @@ h3{
     border: none;
     padding: 10px 30px;
     border-radius: 30px;
-    background-color: #858eb9;
+    background-color: #40615a;
     color: #fff;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
     right: 6px;
@@ -166,7 +166,7 @@ h3{
 }
 
 .Text-sobre p{
-    color: #858eb9;
+    color: #40615a;
     letter-spacing: 1px;
     line-height: 28px;
     font-size: 18px;
@@ -174,7 +174,7 @@ h3{
 }
 
 button{
-    background-color: #858eb9;
+    background-color: #40615a;
     color: #fff;
     text-transform: none;
     border: 2px solid transparent;
@@ -188,7 +188,7 @@ button{
 
 button:hover{
     background-color: transparent;
-    border: 2px solid #858eb9;
+    border: 2px solid #40615a;
     cursor: pointer;
 }
 
@@ -232,7 +232,7 @@ button:hover{
     display: block;
     text-align: center;
     margin: 25px 0px;
-    color: #858eb9;
+    color: #40615a;
 }
 
 h5{
@@ -242,7 +242,7 @@ h5{
 }
 
 .Paragrafo-button{
-    color: #3e4565;
+    color: #2c4541;
     font-size: 16px;
     line-height: 27px;
     margin-bottom: 25px;
@@ -301,7 +301,7 @@ footer p{
 }
 
 .Redes-sociais a{
-    background-color: #858eb9;
+    background-color: #40615a;
     width: 45px;
     height: 45px;
     padding: 15px;
@@ -323,7 +323,7 @@ footer p{
 
 .end{
     position: absolute;
-    color: #858eb9;
+    color: #40615a;
     bottom: 35px;
     font-size: 14px ;
 }
